# UmutGeneralAPI

./: .env  Cargo.toml
migrations/2023-04-16-152010_create_user/: up.sql
src/: constants.rs  main.rs
src/db/: db.rs  models.rs
src/routes/: mod.rs  post_login.rs  post_register.rs
src/routes/auth/: crypt.rs  get_cookies.rs  get_user.rs  get_users.rs  mod.rs  post_login.rs  post_logout.rs  post_register.rs
src/state/: auth.rs
