[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version= "0.5.0-rc.3", features = ["json", "secrets"]}
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
diesel_migrations = "2.0.0"
serde = "1.0.160"
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
uuid = { version = "1.3.1", features= ["v4"]}
